Revision history for Perl extension Archive::Zip

1.23 Thu  8 Nov 2007 - Adam Kennedy
  - Temporarily skilling some failing tests on Win32 in the
    interests of toolchain sanity. (until we work out the
    real problem here)

1.22 Fri  2 Nov 2007 - Adam Kennedy
  - Fixing platform compatibility bugs in the new regression tests
    from 1.21.

1.21 Thu  1 Nov 2007 - Adam Kennedy
  - Tidying up copyright formatting a bit.
  - Disable the GPBF_HAS_DATA_DESCRIPTOR_MASK bit when auto-switching
    directory storage to STORED because of a WinZip workaround because
    the read code in Java JAR which was... ok, I really don't understand,
    but Roland from Verisign says this one extra line unbreaks JAR files,
    so I just applied it :)
  - fixed http://rt.cpan.org/Public/Bug/Display.html?id=27463 with a
    regression test - cannot add files whose entire filenames are "0". 
    (SHLOMIF).
  - fixed http://rt.cpan.org/Public/Bug/Display.html?id=26384 with a 
    regression test - Archive::Zip::MemberRead::getline ignores 
    $INPUT_RECORD_SEPARATOR . The modified file in the bug had it to be
    reworked a bit and tests were added in the file
    08_readmember_record_sep.t. 
      - Thanks to kovesp [...] sympatico.ca 
      - (SHLOMIF)

1.20 Tue  5 Jun 2007 - Adam Kennedy
  - Removing dependency on File::Which due to public outburst of flaming
    on cpanra(n)tings by H.Merijn Brand. Try a simple email next time. :(
  - Embedding an entire copy of File::Which inside the tests instead as
    an alternative to compensating for the lack of build_requires.
  - Removing the docs directory.
    It only had out of date files and non-free copyrighted materials.
    The tarball was probably illegal to distribute as a result.
    (reported by Debian devs)

1.19 Internal use, public release skipped

1.18 Wed 25 Oct 2006 - Adam Kennedy
  - Changing to a production version for final release
  - No other changes of any kind

1.17_05 Tue 19 Sep 2006 - Adam Kennedy